cabal-version: 2.2

name: adventofcode2020
version: 0.1.0.0
author: rvLMdE7
build-type: Simple

source-repository head
  type: git
  location: https://github.com/rvLMdE7/advent-of-code-2020

common common-lang-options
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
    , NumericUnderscores
    , BinaryLiterals

common common-lib-options
  import: common-lang-options
  build-depends:
      base ^>=4.14
    , bytestring
    , flow
    , text
    , mtl
    , containers
    , nonempty-containers
    , vector
    , megaparsec
    , th-printf
    , linear
    , optics
    , pretty-simple
    , algebraic-graphs
  ghc-options: -Wall

common common-exe-options
  import: common-lang-options
  build-depends:
      base
    , adventofcode2020
  hs-source-dirs: run

library
  import: common-lib-options
  hs-source-dirs:
      day-01
    , day-02
    , day-03
    , day-04
    , day-05
    , day-06
    , day-07
    , day-08
    , day-09
    , day-10
    , day-11
    , day-12
    , day-13
    , day-14
    , day-15
  exposed-modules:
      Day01
    , Day02
    , Day03
    , Day04
    , Day05
    , Day06
    , Day07
    , Day08
    , Day09
    , Day10
    , Day11
    , Day12
    , Day13
    , Day14
    , Day15

executable day-01
  import: common-exe-options
  mixins: adventofcode2020 (Day01 as Day)
  main-is: Main.hs

executable day-02
  import: common-exe-options
  mixins: adventofcode2020 (Day02 as Day)
  main-is: Main.hs

executable day-03
  import: common-exe-options
  mixins: adventofcode2020 (Day03 as Day)
  main-is: Main.hs

executable day-04
  import: common-exe-options
  mixins: adventofcode2020 (Day04 as Day)
  main-is: Main.hs

executable day-05
  import: common-exe-options
  mixins: adventofcode2020 (Day05 as Day)
  main-is: Main.hs

executable day-06
  import: common-exe-options
  mixins: adventofcode2020 (Day06 as Day)
  main-is: Main.hs

executable day-07
  import: common-exe-options
  mixins: adventofcode2020 (Day07 as Day)
  main-is: Main.hs

executable day-08
  import: common-exe-options
  mixins: adventofcode2020 (Day08 as Day)
  main-is: Main.hs

executable day-09
  import: common-exe-options
  mixins: adventofcode2020 (Day09 as Day)
  main-is: Main.hs

executable day-10
  import: common-exe-options
  mixins: adventofcode2020 (Day10 as Day)
  main-is: Main.hs

executable day-11
  import: common-exe-options
  mixins: adventofcode2020 (Day11 as Day)
  main-is: Main.hs

executable day-12
  import: common-exe-options
  mixins: adventofcode2020 (Day12 as Day)
  main-is: Main.hs

executable day-13
  import: common-exe-options
  mixins: adventofcode2020 (Day13 as Day)
  main-is: Main.hs

executable day-14
  import: common-exe-options
  mixins: adventofcode2020 (Day14 as Day)
  main-is: Main.hs

executable day-15
  import: common-exe-options
  mixins: adventofcode2020 (Day15 as Day)
  main-is: Main.hs
